name:                haskell-clusters-gtk
version:             0.1.0.0
synopsis:            Graphical tool to play with 2D clustering
homepage:            http://github.com/dzhus/haskell-clusters-gtk
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dima@dzhus.org
copyright:           2011 Dmitry Dzhus
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable haskell-clusters-gtk
--  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , cairo
                     , Chart
                     , Chart-cairo
                     , colour
                     , containers
                     , data-default-class
                     , gtk
                     , lens
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dzhus/haskell-clusters-gtk
